Add lab help to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+# code snippets from MLS
+lab2.java
+
 # Permanently borrowed from SO user Lior Iluz at https://stackoverflow.com/questions/16736856/what-should-be-in-my-gitignore-for-an-android-studio-project
 # Modified to effect all subdirectories
 
